--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,15 +20,14 @@ jobs:
     - name: Build Devcontainer
       uses: devcontainers/ci@v0.2
       with:
-        imageName: ghcr.io/GerdHirsch/TrafficControlSystem
+        imageName: local-devcontainer
         cacheFrom: mcr.microsoft.com/devcontainers/cpp:0-ubuntu-22.04
         push: never
     
     - name: Configure
       uses: devcontainers/ci@v0.2.1900000118
       with:
-        imageName: ghcr.io/GerdHirsch/TrafficControlSystem
-        imageTag: latest
+        imageName: local-devcontainer
         runCmd: |
           mkdir build
           cmake -S ./ -B build/
@@ -37,8 +36,7 @@ jobs:
     - name: Build
       uses: devcontainers/ci@v0.2.1900000118
       with:
-        imageName: ghcr.io/GerdHirsch/TrafficControlSystem
-        imageTag: latest
+        imageName: local-devcontainer
         runCmd: |
           cmake --build build/
         push: never
@@ -46,8 +44,7 @@ jobs:
     - name: Test
       uses: devcontainers/ci@v0.2.1900000118
       with:
-        imageName: ghcr.io/GerdHirsch/TrafficControlSystem
-        imageTag: latest
+        imageName: local-devcontainer
         runCmd: |
           cd build && ctest --output-on-failure
         push: never
